[package]
name = "cargo-cargo"
authors = ["29 <791603901@qq.com>"]
version = "1.0.2"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["april-fool", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
repository = "https://github.com/opensound-org/cargo-cargo"
homepage = "https://github.com/opensound-org/cargo-cargo"
description = """
Literally, cargo cargo cargo cargo cargo...
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
